--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,4 +20,7 @@ sphinx:
 python:
     install:
     - requirements: docs/requirements.txt
+
+sphinx:
+  configuration: docs/source/conf.py
         
